# RecSPL-Compiler

./: .gitignore  CFG.xml  CMakeLists.txt  Dockerfile  README.md  commands.gdb  input.txt  input1.txt  inputfail0.txt  inputfail1.txt  inputfail10.txt  inputfail11.txt  inputfail12.txt  inputfail13.txt  inputfail14.txt  inputfail15.txt  inputfail16.txt  inputfail17.txt  inputfail18.txt  inputfail19.txt  inputfail2.txt  inputfail20.txt  inputfail21.txt  inputfail22.txt  inputfail3.txt  inputfail5.txt  inputfail6.txt  inputfail7.txt  inputfail9.txt  inputfailmultiple1.txt  inputpass1.txt  inputpass2.txt  inputpass23.txt  inputpass4.txt  inputpass8.txt  parse-table 15-08 11_39.csv  parse-table 15-08 11_39.ods  parse-table.csv  render-automata.py  render-dfa.py  (+3 more)
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/ast_node/: CMakeLists.txt
src/ast_node/include/: ast_node.hpp
src/ast_node/src/: ast_node.cpp
src/automata/: CMakeLists.txt
src/automata/include/: automata.hpp
src/automata/src/: automata.cpp  state.cpp  token.cpp  tree.cpp
src/code_generator/: CMakeLists.txt
src/code_generator/include/: code_generator.hpp
src/code_generator/src/: code_generator.cpp  intermediate_generation.cpp
src/lexer/: CMakeLists.txt
src/lexer/include/: lexer.hpp
src/lexer/src/: lexer.cpp
src/parser/: CMakeLists.txt
src/parser/include/: parser.hpp
src/parser/src/: parser.cpp
src/pugixml/: CMakeLists.txt
src/scope_checker/: CMakeLists.txt
src/scope_checker/include/: scope_checker.hpp
src/scope_checker/src/: scope_checker.cpp  scope_checker.hpp
src/testing/: CMakeLists.txt
src/testing/include/: testing.hpp
src/testing/src/: testing.cpp
src/type_checker/: CMakeLists.txt
src/type_checker/include/: type_checker.hpp
src/type_checker/src/: type_checker.cpp
